2004-11-03  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclTrace.c (TclCallVarTraces):  Improved ability to debug
	* tests/incr-old.test (incr-old-2.6):	  errors during variable
	* tests/incr.test (incr-{1,2}.28):	  traces by preserving the
	* tests/set.test (set-{2,4}.4):		  -errorinfo data.
	* tests/trace.test (trace-33.1):	  [Bug 527164]

2004-11-02  David Gravereaux <davygrvy@pobox.com>

	* generic/tclInt.h: added a check for #ifdef __cplusplus around
	the #define of MODULE_SCOPE.  About the only time it would be
	problem is when someone is statically linking to Tcl and accessing
	internals from a C++ file and has name mangling issues from the
	lack of "C" after 'extern' [Patch 1055668].
	* generic/tclCompile.h: Exchanged use of the EXTERN macro to the
	new MODULE_SCOPE macro.  Lowered exported internals count by 35.
	[Patch 1055668]
	* win/tclWinInt.h:
	* win/tclWinPort.h: exported internals dropped by a count of 14.
	* generic/tclFileSystem.h: Added use of MODULE_SCOPE on protos.
	* generic/tclRegexp.h: manipulating TCL_STORAGE_CLASS unnecessary.

2004-11-02  Don Porter  <dgp@users.sourceforge.net>

	* library/tcltest/tcltest.tcl:		Corrected some misleading
	* tests/tcltest.test (tcltest-26.1,2):	displays of ::errorInfo and
	::errorCode information when the -setup, -body, and/or -cleanup scripts
	return an unexpected return code.  Thanks to Robert Seeger for the
	fix. [RFE 1017151].

2004-11-02  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tclExecute.c (TclExecuteByteCode): Improved version of
	the NaN fix from Miguel Sofer. [Bug 761471]

2004-11-02  Kevin Kenny  <kennykb@acm.org>

	* library/tzdata/America/Cuiaba: Change to DST rules for
	* library/tzdata/America/Havana: autumn of 2004. 
	[ftp://elsie.nci.nih.gov/pub/tzdata2004g.tar.gz]
	
	* tools/tclZIC.tcl: Updated to be compatible with recent
	changes in library/clock.tcl.
	
2004-11-02  Vince Darley  <vincentdarley@users.sourceforge.net>
