@@ -19,10 +19,16 @@
 
 #include "tclPort.h"
 
+#undef TCL_STORAGE_CLASS
 #ifdef BUILD_tcl
-#   undef TCL_STORAGE_CLASS
 #   define TCL_STORAGE_CLASS DLLEXPORT
-#endif /* BUILD_tcl */
+#else
+#   ifdef USE_TCL_STUBS
+#      define TCL_STORAGE_CLASS
+#   else
+#      define TCL_STORAGE_CLASS DLLIMPORT
+#   endif
+#endif
 
 /*
  * WARNING: This file is automatically generated by the tools/genStubs.tcl
@@ -2035,5 +2041,8 @@ extern TclIntStubs *tclIntStubsPtr;
 #endif /* defined(USE_TCL_STUBS) && !defined(USE_TCL_STUB_PROCS) */
 
 /* !END!: Do not edit above this line. */
+
+#undef TCL_STORAGE_CLASS
+#define TCL_STORAGE_CLASS DLLIMPORT
 
 #endif /* _TCLINTDECLS */
