@@ -1,3 +1,15 @@
+2004-11-03  David Gravereaux <davygrvy@pobox.com>
+
+	* generic/tcl.h:		Moved the preprocessor logic
+	* generic/tclDecls.h:		from tclInt.h of setting the
+	* generic/tclInt.h:		TCL_STORAGE_CLASS macro to the
+	* generic/tclIntDecls.h:	tcl*Decls.h files now that no
+	* generic/tclIntPlatDecls.h:	use of EXTERN is left in tclInt.h.
+	* generic/tclPlatDecls.h:	Proto for Tcl_Main moved in tcl.h
+	* win/tclWinPort.h:		to prior the inclusion of the Stubs
+	headers as they are now resetting TCL_STORAGE_CLASS.  Removed
+	extrainious reset from tclWinPort.h.  [Patch 1055668]
+
 2004-11-03  Don Porter  <dgp@users.sourceforge.net>
 
 	* generic/tclTrace.c (TclCallVarTraces):  Improved ability to debug
